# vstupbot2

./: .env.dist  .gitignore  LICENSE  pyproject.toml
bot/: config.py  states.py
parser/: speccreate.py
vb2/: settings.py
vb2/bot/: __main__.py  conf.py  main.py  run.py
vb2/bot/handlers/: calculus.py  configure.py  exam.py  spec.py  start.py
vb2/bot/markup/: config_markup.py  exam_markup.py  spec_markup.py  start_markup.py
vb2/bot/text/: text_en.json  text_ua.json
vb2/bot/user/: users.json
vb2/bot/utils/: db_operations.py  exam.py  json_operations.py  search_spec.py  states.py  user_operations.py
vb2/common/: db.py  dto.py
vb2/parser/: catcreate.py  coefcreate.py  speccreate.py  speclist.txt  supabase.py
