[tool.poetry]
name = "vstupbot2"
version = "0.1.0"
description = ""
authors = ["Igor4er <sherednihenko.ihor@gmail.com>", "EtriKodoku <volodymyrpetriv2207@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0"
pydantic-settings = "^2.0.0"
aiogram = "^2.25.1"
tqdm = "^4.65.0"
thefuzz = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
